# ODR-PadEnc

./: .gitignore  .travis.yml  ChangeLog  Doxyfile  LICENCE  Makefile.am  README.md  configure.ac
src/: charset.h  common.cpp  common.h  crc.c  crc.cpp  crc.h  dls.cpp  dls.h  mot-encoder.cpp  odr-padenc.cpp  odr-padenc.h  pad_common.cpp  pad_common.h  pad_interface.cpp  pad_interface.h  sls.cpp  sls.h
